--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 30px "Century Gothic", Futura, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, #root>div {  
+  height: 100%;
+  width: 100%;
+  margin: 0px;
 }
+
+#ball {
+  background-color: darkblue;
+  position: absolute;
+  transform: translateY(5px); 
+  height: 30px;
+  width: 30px;
+  border-radius:30px;
+}
+
+.button3 {
+  width: 100%;
+  font-size: 24px;
+  padding:0.3em 1.2em;
+  margin:0 10px 10px 0;
+  border-radius:70px;
+  border: 2px solid #4095c6; /* Green */
+  font-weight:700;
+  color:#FFFFFF;
+  background-color:#4eb5f1;
+  text-align:center;
+  transition: all 0.15s;
+}
+.button3:hover {
+  background-color:#4095c6;
+}
+@media all and (max-width:30em){
+  .button3 {
+    display:block;
+    margin:0.2em auto;
+  }
+} 
+
+.textField1 {
+  font-size: 30px;
+  text-align: center;
+  border-radius:70px;
+  padding:0.3em 0.5em;
+  outline: none;
+  transition: all 0.15s;
+
+}
+.textField1:hover {
+  background-color: #effafd;
+}
+.textField1:focus {
+  background-color: #dff6ff;
+}
+
+.align-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
+}
+
+.align-container-tr {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+
+
+.margin-container {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+
+
+
