--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html, body, #root, #root>div {
 .button3 {
   width: 100%;
   font-size: 24px;
-  padding:0.3em 1.2em;
+  padding:0.1em 1.2em;
   margin:0 10px 10px 0;
   border-radius:70px;
   border: 2px solid #4095c6; /* Green */
@@ -80,7 +80,7 @@ html, body, #root, #root>div {
   font-size: 30px;
   text-align: center;
   border-radius:70px;
-  padding:0.3em 0.5em;
+  padding:0.1em 0.1em;
   outline: none;
   transition: all 0.15s;
 
@@ -126,10 +126,15 @@ html, body, #root, #root>div {
   outline: none;
 }
 
-.kbd-navigation .square:focus {
-  background: #ddd;
+
+
+.listEntry {
+  color: #777777;
+  font-size: 30px;
+  text-align: center;
+  border-radius:10px;
+  border: solid 2px #cecece;
+  padding:0.25em 0.25em;
+  outline: none;
+  transition: all 0.15s;
 }
-
-
-
-
