change list elements into simple buttons

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ html, body, #root, #root>div {
   padding:0.1em 1.2em;
   margin:0 10px 10px 0;
   border-radius:70px;
-  border: 2px solid #4095c6; /* Green */
+  border: 2px solid #4095c6;
   font-weight:700;
   color:#FFFFFF;
   background-color:#4eb5f1;
@@ -39,6 +39,30 @@ html, body, #root, #root>div {
     margin:0.2em auto;
   }
 }
+
+.listbutton {
+  width: 100%;
+  font-size: 24px;
+  padding:0.1em 1.2em;
+  margin:0 10px 10px 0;
+  border-radius:70px;
+  border: 2px solid #4095c6;
+  font-weight:700;
+  color:#FFFFFF;
+  background-color:#4eb5f1;
+  text-align:center;
+  transition: all 0.15s;
+}
+.listbutton:hover {
+  background-color:#4095c6;
+}
+@media all and (max-width:30em){
+  .listbutton {
+    display:block;
+    margin:0.2em auto;
+  }
+}
+
 
 
 .button3small {
