--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,13 @@ html, body, #root, #root>div {
   box-shadow: 0px 2px 5px lightblue;
   padding: 20px;
   padding-bottom: 30px;
+  padding-right: 40px;
 }
 
-.mainbarbutton {
+
+
+
+.mainbarbutton-active {
   font-size: 22px;
   width: 100%;
   margin-top: 10px;
@@ -26,14 +30,49 @@ html, body, #root, #root>div {
   font-weight:700;
   color:#FFFFFF;
   background-color:#4eb5f1;
-  text-align:center;
   transition: all 0.15s;
+
+  display: flex;
+  align-items: center;
+
+  text-decoration: none;
 }
-.mainbarbutton:hover {
+.mainbarbutton-active:hover {
   background-color:#4095c6;
 }
 @media all and (max-width:30em){
-  .mainbarbutton {
+  .mainbarbutton-active {
+    display:block;
+    margin:0.2em auto;
+  }
+}
+
+.mainbarbutton-inactive {
+  font-size: 22px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  padding: 5px;
+  border-radius:8px;
+  border: 2px solid #FFFFFF;
+  font-weight:700;
+  color:#777777;
+  /* background-color:#4eb5f1; */
+  transition: all 0.15s;
+
+  display: flex;
+  align-items: center;
+
+  text-decoration: none;
+}
+.mainbarbutton-inactive:hover {
+  background-color:#b6d9ee;
+  border: 2px solid #71bbe6;
+
+}
+@media all and (max-width:30em){
+  .mainbarbutton-inactive {
     display:block;
     margin:0.2em auto;
   }
@@ -186,3 +225,5 @@ html, body, #root, #root>div {
     margin:0.2em auto;
   }
 }  */
+
+.gridcontainer
